[package]
name = "rs-cube"
version = "1.0.2"
edition = "2021"
description = "Blazingly Fast 3D ASCII Rubik's Cube"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
libc = "0.2"
